ansible_scripts/roles/install_apps/jaeger/files/jaeger_edgenius_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jaeger
  namespace: edgenius
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: jaeger-edgenius-query
              port:
                number: 16686
